# image_processor

./: CMakeLists.txt  README.md  main.cpp  main.h
Filters/: Utils.h  filter.cpp  filter.h
Image/: Color.cpp  Color.h  Image.cpp  Image.h
Parsing/: Parse.cpp  Parse.h
Reading_and_writing/: Reader.h  Utils.h  Write.cpp  Writer.h
